fix suggested-project-wrap margin-bottom

--- a/app/assets/stylesheets/cm-custom.css.sass
+++ b/app/assets/stylesheets/cm-custom.css.sass
@@ -436,6 +436,7 @@ a.mail
   background-position: center
   background-repeat: repeat-x
   position: relative
+  margin-bottom: 15px
   .org-avatar
     position: absolute
     width: 80px
